Fix compiler errors after restructuring project into multi-module design